--- a/style.css
+++ b/style.css
@@ -132,6 +132,9 @@ p {
 .notes {
   text-align: center;
 }
+footer{
+  text-align: center;
+}
 @media only screen and (max-width: 600px) {
   * {
     font-size: 1rem;
